fix background hero img on smaller device

--- a/css/main.scss
+++ b/css/main.scss
@@ -218,7 +218,7 @@ nav {
 
 	.hero-shoe {
 		position: absolute;
-		bottom: -7.5%;
+		bottom: -15%;
 		right: -10%;
 		width: 100%;
 		height: 100%;
